wrapper/tmp.h


typedef unsigned char uint8_t;
#define NULL ((void *)0)
#define NULL ((void *)0)
typedef __gnuc_va_list va_list;
#define NULL ((void *)0)
extern int atexit (void (*__func) (void)) ;
extern int on_exit (void (*__func) (int __status, void *__arg), void *__arg)
     ;
#define NULL ((void *)0)
#define NULL ((void *)0)
void av_log_set_callback(void (*)(void*, int, const char*, va_list));
enum AVPixelFormat {
    AV_PIX_FMT_NONE = -1,
    AV_PIX_FMT_YUV420P, 
    AV_PIX_FMT_YUYV422, 
    AV_PIX_FMT_RGB24, 
    AV_PIX_FMT_BGR24, 
    AV_PIX_FMT_YUV422P, 
    AV_PIX_FMT_YUV444P, 
    AV_PIX_FMT_YUV410P, 
    AV_PIX_FMT_YUV411P, 
    AV_PIX_FMT_GRAY8, 
    AV_PIX_FMT_MONOWHITE, 
    AV_PIX_FMT_MONOBLACK, 
    AV_PIX_FMT_PAL8, 
    AV_PIX_FMT_YUVJ420P, 
    AV_PIX_FMT_YUVJ422P, 
    AV_PIX_FMT_YUVJ444P, 
    AV_PIX_FMT_XVMC_MPEG2_MC,
    AV_PIX_FMT_XVMC_MPEG2_IDCT,
    AV_PIX_FMT_UYVY422, 
    AV_PIX_FMT_UYYVYY411, 
    AV_PIX_FMT_BGR8, 
    AV_PIX_FMT_BGR4, 
    AV_PIX_FMT_BGR4_BYTE, 
    AV_PIX_FMT_RGB8, 
    AV_PIX_FMT_RGB4, 
    AV_PIX_FMT_RGB4_BYTE, 
    AV_PIX_FMT_NV12, 
    AV_PIX_FMT_NV21, 
    AV_PIX_FMT_ARGB, 
    AV_PIX_FMT_RGBA, 
    AV_PIX_FMT_ABGR, 
    AV_PIX_FMT_BGRA, 
    AV_PIX_FMT_GRAY16BE, 
    AV_PIX_FMT_GRAY16LE, 
    AV_PIX_FMT_YUV440P, 
    AV_PIX_FMT_YUVJ440P, 
    AV_PIX_FMT_YUVA420P, 
    AV_PIX_FMT_VDPAU_H264,
    AV_PIX_FMT_VDPAU_MPEG1,
    AV_PIX_FMT_VDPAU_MPEG2,
    AV_PIX_FMT_VDPAU_WMV3,
    AV_PIX_FMT_VDPAU_VC1, 
    AV_PIX_FMT_RGB48BE, 
    AV_PIX_FMT_RGB48LE, 
    AV_PIX_FMT_RGB565BE, 
    AV_PIX_FMT_RGB565LE, 
    AV_PIX_FMT_RGB555BE, 
    AV_PIX_FMT_RGB555LE, 
    AV_PIX_FMT_BGR565BE, 
    AV_PIX_FMT_BGR565LE, 
    AV_PIX_FMT_BGR555BE, 
    AV_PIX_FMT_BGR555LE, 
    AV_PIX_FMT_VAAPI_MOCO, 
    AV_PIX_FMT_VAAPI_IDCT, 
    AV_PIX_FMT_VAAPI_VLD, 
    AV_PIX_FMT_YUV420P16LE, 
    AV_PIX_FMT_YUV420P16BE, 
    AV_PIX_FMT_YUV422P16LE, 
    AV_PIX_FMT_YUV422P16BE, 
    AV_PIX_FMT_YUV444P16LE, 
    AV_PIX_FMT_YUV444P16BE, 
    AV_PIX_FMT_VDPAU_MPEG4, 
    AV_PIX_FMT_DXVA2_VLD, 
    AV_PIX_FMT_RGB444LE, 
    AV_PIX_FMT_RGB444BE, 
    AV_PIX_FMT_BGR444LE, 
    AV_PIX_FMT_BGR444BE, 
    AV_PIX_FMT_GRAY8A, 
    AV_PIX_FMT_BGR48BE, 
    AV_PIX_FMT_BGR48LE, 
    AV_PIX_FMT_YUV420P9BE, 
    AV_PIX_FMT_YUV420P9LE, 
    AV_PIX_FMT_YUV420P10BE,
    AV_PIX_FMT_YUV420P10LE,
    AV_PIX_FMT_YUV422P10BE,
    AV_PIX_FMT_YUV422P10LE,
    AV_PIX_FMT_YUV444P9BE, 
    AV_PIX_FMT_YUV444P9LE, 
    AV_PIX_FMT_YUV444P10BE,
    AV_PIX_FMT_YUV444P10LE,
    AV_PIX_FMT_YUV422P9BE, 
    AV_PIX_FMT_YUV422P9LE, 
    AV_PIX_FMT_VDA_VLD, 
    AV_PIX_FMT_GBRP, 
    AV_PIX_FMT_GBRP9BE, 
    AV_PIX_FMT_GBRP9LE, 
    AV_PIX_FMT_GBRP10BE, 
    AV_PIX_FMT_GBRP10LE, 
    AV_PIX_FMT_GBRP16BE, 
    AV_PIX_FMT_GBRP16LE, 
    AV_PIX_FMT_YUVA422P_LIBAV, 
    AV_PIX_FMT_YUVA444P_LIBAV, 
    AV_PIX_FMT_YUVA420P9BE, 
    AV_PIX_FMT_YUVA420P9LE, 
    AV_PIX_FMT_YUVA422P9BE, 
    AV_PIX_FMT_YUVA422P9LE, 
    AV_PIX_FMT_YUVA444P9BE, 
    AV_PIX_FMT_YUVA444P9LE, 
    AV_PIX_FMT_YUVA420P10BE, 
    AV_PIX_FMT_YUVA420P10LE, 
    AV_PIX_FMT_YUVA422P10BE, 
    AV_PIX_FMT_YUVA422P10LE, 
    AV_PIX_FMT_YUVA444P10BE, 
    AV_PIX_FMT_YUVA444P10LE, 
    AV_PIX_FMT_YUVA420P16BE, 
    AV_PIX_FMT_YUVA420P16LE, 
    AV_PIX_FMT_YUVA422P16BE, 
    AV_PIX_FMT_YUVA422P16LE, 
    AV_PIX_FMT_YUVA444P16BE, 
    AV_PIX_FMT_YUVA444P16LE, 
    AV_PIX_FMT_VDPAU, 
    AV_PIX_FMT_XYZ12LE, 
    AV_PIX_FMT_XYZ12BE, 
    AV_PIX_FMT_RGBA64BE=0x123, 
    AV_PIX_FMT_RGBA64LE, 
    AV_PIX_FMT_BGRA64BE, 
    AV_PIX_FMT_BGRA64LE, 
    AV_PIX_FMT_0RGB=0x123+4, 
    AV_PIX_FMT_RGB0, 
    AV_PIX_FMT_0BGR, 
    AV_PIX_FMT_BGR0, 
    AV_PIX_FMT_YUVA444P, 
    AV_PIX_FMT_YUVA422P, 
    AV_PIX_FMT_YUV420P12BE, 
    AV_PIX_FMT_YUV420P12LE, 
    AV_PIX_FMT_YUV420P14BE, 
    AV_PIX_FMT_YUV420P14LE, 
    AV_PIX_FMT_YUV422P12BE, 
    AV_PIX_FMT_YUV422P12LE, 
    AV_PIX_FMT_YUV422P14BE, 
    AV_PIX_FMT_YUV422P14LE, 
    AV_PIX_FMT_YUV444P12BE, 
    AV_PIX_FMT_YUV444P12LE, 
    AV_PIX_FMT_YUV444P14BE, 
    AV_PIX_FMT_YUV444P14LE, 
    AV_PIX_FMT_GBRP12BE, 
    AV_PIX_FMT_GBRP12LE, 
    AV_PIX_FMT_GBRP14BE, 
    AV_PIX_FMT_GBRP14LE, 
    AV_PIX_FMT_GBRAP, 
    AV_PIX_FMT_GBRAP16BE, 
    AV_PIX_FMT_GBRAP16LE, 
    AV_PIX_FMT_YUVJ411P, 
    AV_PIX_FMT_NB, 
# 1 "include/libavutil/old_pix_fmts.h" 1
#define AVUTIL_OLD_PIX_FMTS_H 
    PIX_FMT_NONE = AV_PIX_FMT_NONE,
    PIX_FMT_YUV420P, 
    PIX_FMT_YUYV422, 
    PIX_FMT_RGB24, 
    PIX_FMT_BGR24, 
    PIX_FMT_YUV422P, 
    PIX_FMT_YUV444P, 
    PIX_FMT_YUV410P, 
    PIX_FMT_YUV411P, 
    PIX_FMT_GRAY8, 
    PIX_FMT_MONOWHITE, 
    PIX_FMT_MONOBLACK, 
    PIX_FMT_PAL8, 
    PIX_FMT_YUVJ420P, 
    PIX_FMT_YUVJ422P, 
    PIX_FMT_YUVJ444P, 
    PIX_FMT_XVMC_MPEG2_MC,
    PIX_FMT_XVMC_MPEG2_IDCT,
    PIX_FMT_UYVY422, 
    PIX_FMT_UYYVYY411, 
    PIX_FMT_BGR8, 
    PIX_FMT_BGR4, 
    PIX_FMT_BGR4_BYTE, 
    PIX_FMT_RGB8, 
    PIX_FMT_RGB4, 
    PIX_FMT_RGB4_BYTE, 
    PIX_FMT_NV12, 
    PIX_FMT_NV21, 
    PIX_FMT_ARGB, 
    PIX_FMT_RGBA, 
    PIX_FMT_ABGR, 
    PIX_FMT_BGRA, 
    PIX_FMT_GRAY16BE, 
    PIX_FMT_GRAY16LE, 
    PIX_FMT_YUV440P, 
    PIX_FMT_YUVJ440P, 
    PIX_FMT_YUVA420P, 
    PIX_FMT_VDPAU_H264,
    PIX_FMT_VDPAU_MPEG1,
    PIX_FMT_VDPAU_MPEG2,
    PIX_FMT_VDPAU_WMV3,
    PIX_FMT_VDPAU_VC1, 
    PIX_FMT_RGB48BE, 
    PIX_FMT_RGB48LE, 
    PIX_FMT_RGB565BE, 
    PIX_FMT_RGB565LE, 
    PIX_FMT_RGB555BE, 
    PIX_FMT_RGB555LE, 
    PIX_FMT_BGR565BE, 
    PIX_FMT_BGR565LE, 
    PIX_FMT_BGR555BE, 
    PIX_FMT_BGR555LE, 
    PIX_FMT_VAAPI_MOCO, 
    PIX_FMT_VAAPI_IDCT, 
    PIX_FMT_VAAPI_VLD, 
    PIX_FMT_YUV420P16LE, 
    PIX_FMT_YUV420P16BE, 
    PIX_FMT_YUV422P16LE, 
    PIX_FMT_YUV422P16BE, 
    PIX_FMT_YUV444P16LE, 
    PIX_FMT_YUV444P16BE, 
    PIX_FMT_VDPAU_MPEG4, 
    PIX_FMT_DXVA2_VLD, 
    PIX_FMT_RGB444LE, 
    PIX_FMT_RGB444BE, 
    PIX_FMT_BGR444LE, 
    PIX_FMT_BGR444BE, 
    PIX_FMT_GRAY8A, 
    PIX_FMT_BGR48BE, 
    PIX_FMT_BGR48LE, 
    PIX_FMT_YUV420P9BE, 
    PIX_FMT_YUV420P9LE, 
    PIX_FMT_YUV420P10BE,
    PIX_FMT_YUV420P10LE,
    PIX_FMT_YUV422P10BE,
    PIX_FMT_YUV422P10LE,
    PIX_FMT_YUV444P9BE, 
    PIX_FMT_YUV444P9LE, 
    PIX_FMT_YUV444P10BE,
    PIX_FMT_YUV444P10LE,
    PIX_FMT_YUV422P9BE, 
    PIX_FMT_YUV422P9LE, 
    PIX_FMT_VDA_VLD, 
    PIX_FMT_GBRP, 
    PIX_FMT_GBRP9BE, 
    PIX_FMT_GBRP9LE, 
    PIX_FMT_GBRP10BE, 
    PIX_FMT_GBRP10LE, 
    PIX_FMT_GBRP16BE, 
    PIX_FMT_GBRP16LE, 
    PIX_FMT_RGBA64BE=0x123, 
    PIX_FMT_RGBA64LE, 
    PIX_FMT_BGRA64BE, 
    PIX_FMT_BGRA64LE, 
    PIX_FMT_0RGB=0x123+4, 
    PIX_FMT_RGB0, 
    PIX_FMT_0BGR, 
    PIX_FMT_BGR0, 
    PIX_FMT_YUVA444P, 
    PIX_FMT_YUVA422P, 
    PIX_FMT_YUV420P12BE, 
    PIX_FMT_YUV420P12LE, 
    PIX_FMT_YUV420P14BE, 
    PIX_FMT_YUV420P14LE, 
    PIX_FMT_YUV422P12BE, 
    PIX_FMT_YUV422P12LE, 
    PIX_FMT_YUV422P14BE, 
    PIX_FMT_YUV422P14LE, 
    PIX_FMT_YUV444P12BE, 
    PIX_FMT_YUV444P12LE, 
    PIX_FMT_YUV444P14BE, 
    PIX_FMT_YUV444P14LE, 
    PIX_FMT_GBRP12BE, 
    PIX_FMT_GBRP12LE, 
    PIX_FMT_GBRP14BE, 
    PIX_FMT_GBRP14LE, 
    PIX_FMT_NB, 
# 245 "include/libavutil/pixfmt.h" 2
};
#define LIBSWSCALE_VERSION_INT AV_VERSION_INT(LIBSWSCALE_VERSION_MAJOR, LIBSWSCALE_VERSION_MINOR, LIBSWSCALE_VERSION_MICRO)
unsigned swscale_version(void);
const char *swscale_configuration(void);
const char *swscale_license(void);
#define SWS_FAST_BILINEAR 1
#define SWS_BILINEAR 2
#define SWS_BICUBIC 4
#define SWS_X 8
#define SWS_POINT 0x10
#define SWS_AREA 0x20
#define SWS_BICUBLIN 0x40
#define SWS_GAUSS 0x80
#define SWS_SINC 0x100
#define SWS_LANCZOS 0x200
#define SWS_SPLINE 0x400
#define SWS_SRC_V_CHR_DROP_MASK 0x30000
#define SWS_SRC_V_CHR_DROP_SHIFT 16
#define SWS_PARAM_DEFAULT 123456
#define SWS_PRINT_INFO 0x1000
#define SWS_FULL_CHR_H_INT 0x2000
#define SWS_FULL_CHR_H_INP 0x4000
#define SWS_DIRECT_BGR 0x8000
#define SWS_ACCURATE_RND 0x40000
#define SWS_BITEXACT 0x80000
#define SWS_ERROR_DIFFUSION 0x800000
#define SWS_CPU_CAPS_MMX 0x80000000
#define SWS_CPU_CAPS_MMXEXT 0x20000000
#define SWS_CPU_CAPS_MMX2 0x20000000
#define SWS_CPU_CAPS_3DNOW 0x40000000
#define SWS_CPU_CAPS_ALTIVEC 0x10000000
#define SWS_CPU_CAPS_BFIN 0x01000000
#define SWS_CPU_CAPS_SSE2 0x02000000
#define SWS_MAX_REDUCE_CUTOFF 0.002
#define SWS_CS_ITU709 1
#define SWS_CS_FCC 4
#define SWS_CS_ITU601 5
#define SWS_CS_ITU624 5
#define SWS_CS_SMPTE170M 5
#define SWS_CS_SMPTE240M 7
#define SWS_CS_DEFAULT 5
const int *sws_getCoefficients(int colorspace);
typedef struct SwsVector {
    double *coeff; 
    int length; 
} SwsVector;
typedef struct SwsFilter {
    SwsVector *lumH;
    SwsVector *lumV;
    SwsVector *chrH;
    SwsVector *chrV;
} SwsFilter;
struct SwsContext;
int sws_isSupportedInput(enum AVPixelFormat pix_fmt);
int sws_isSupportedOutput(enum AVPixelFormat pix_fmt);
int sws_isSupportedEndiannessConversion(enum AVPixelFormat pix_fmt);
struct SwsContext *sws_alloc_context(void);
int sws_init_context(struct SwsContext *sws_context, SwsFilter *srcFilter, SwsFilter *dstFilter);
void sws_freeContext(struct SwsContext *swsContext);
struct SwsContext *sws_getContext(int srcW, int srcH, enum AVPixelFormat srcFormat,
                                  int dstW, int dstH, enum AVPixelFormat dstFormat,
                                  int flags, SwsFilter *srcFilter,
                                  SwsFilter *dstFilter, const double *param);
int sws_scale(struct SwsContext *c, const uint8_t *const srcSlice[],
              const int srcStride[], int srcSliceY, int srcSliceH,
              uint8_t *const dst[], const int dstStride[]);
int sws_setColorspaceDetails(struct SwsContext *c, const int inv_table[4],
                             int srcRange, const int table[4], int dstRange,
                             int brightness, int contrast, int saturation);
struct SwsContext *sws_getCachedContext(struct SwsContext *context,
                                        int srcW, int srcH, enum AVPixelFormat srcFormat,
                                        int dstW, int dstH, enum AVPixelFormat dstFormat,
                                        int flags, SwsFilter *srcFilter,
                                        SwsFilter *dstFilter, const double *param);