src/org/javaavc/ffmpeg/swscale/LibswscaleLibrary.java

package org.javaavc.ffmpeg.swscale;
import com.sun.jna.Library;
import com.sun.jna.Pointer;
import com.sun.jna.PointerType;
import com.sun.jna.ptr.DoubleByReference;
import com.sun.jna.ptr.IntByReference;
import com.sun.jna.ptr.PointerByReference;
import java.nio.ByteBuffer;
import java.nio.DoubleBuffer;
import java.nio.IntBuffer;
/**
 * JNA Wrapper for library <b>Libswscale</b><br>
 * This file was autogenerated by <a href="http://jnaerator.googlecode.com/">JNAerator</a>,<br>
 * a tool written by <a href="http://ochafik.com/">Olivier Chafik</a> that <a href="http://code.google.com/p/jnaerator/wiki/CreditsAndLicense">uses a few opensource projects.</a>.<br>
 * For help, please visit <a href="http://nativelibs4java.googlecode.com/">NativeLibs4Java</a> , <a href="http://rococoa.dev.java.net/">Rococoa</a>, or <a href="http://jna.dev.java.net/">JNA</a>.
 */
public interface LibswscaleLibrary extends Library {
	public static final int SWS_CPU_CAPS_MMX2 = 0x20000000;
	public static final int SWS_GAUSS = 0x80;
	public static final int SWS_CPU_CAPS_SSE2 = 0x02000000;
	public static final double SWS_MAX_REDUCE_CUTOFF = 0.002;
	public static final int SWS_CS_SMPTE170M = 5;
	public static final int SWS_SPLINE = 0x400;
	public static final int SWS_PRINT_INFO = 0x1000;
	public static final int SWS_BITEXACT = 0x80000;
	public static final int SWS_BICUBLIN = 0x40;
	public static final int SWS_SINC = 0x100;
	public static final int SWS_BICUBIC = 4;
	public static final int SWS_CS_ITU601 = 5;
	public static final int SWS_AREA = 0x20;
	public static final int SWS_CS_ITU709 = 1;
	public static final int SWS_DIRECT_BGR = 0x8000;
	public static final int SWS_FAST_BILINEAR = 1;
	public static final int SWS_CS_SMPTE240M = 7;
	public static final int SWS_SRC_V_CHR_DROP_MASK = 0x30000;
	public static final int SWS_ACCURATE_RND = 0x40000;
	public static final int SWS_CS_DEFAULT = 5;
	public static final int SWS_CS_FCC = 4;
	public static final int SWS_BILINEAR = 2;
	public static final int SWS_SRC_V_CHR_DROP_SHIFT = 16;
	public static final int SWS_FULL_CHR_H_INP = 0x4000;
	public static final int SWS_CPU_CAPS_MMX = 0x80000000;
	public static final int SWS_LANCZOS = 0x200;
	public static final int SWS_FULL_CHR_H_INT = 0x2000;
	public static final int SWS_CPU_CAPS_MMXEXT = 0x20000000;
	public static final int SWS_POINT = 0x10;
	public static final int SWS_CPU_CAPS_BFIN = 0x01000000;
	public static final int SWS_ERROR_DIFFUSION = 0x800000;
	public static final int SWS_PARAM_DEFAULT = 123456;
	public static final int SWS_X = 8;
	public static final int SWS_CPU_CAPS_3DNOW = 0x40000000;
	public static final int SWS_CS_ITU624 = 5;
	public static final int SWS_CPU_CAPS_ALTIVEC = 0x10000000;
	/**
	 * Return the LIBSWSCALE_VERSION_INT constant.<br>
	 * Original signature : <code>int swscale_version()</code>
	 */
	int swscale_version();
	/**
	 * Return the libswscale build-time configuration.<br>
	 * Original signature : <code>char* swscale_configuration()</code>
	 */
	String swscale_configuration();
	/**
	 * Return the libswscale license.<br>
	 * Original signature : <code>char* swscale_license()</code>
	 */
	String swscale_license();
	/**
	 * Return a pointer to yuv<->rgb coefficients for the given colorspace<br>
	 * suitable for sws_setColorspaceDetails().<br>
	 * * @param colorspace One of the SWS_CS_* macros. If invalid,<br>
	 * SWS_CS_DEFAULT is used.<br>
	 * Original signature : <code>int* sws_getCoefficients(int)</code>
	 */
	IntByReference sws_getCoefficients(int colorspace);
	/**
	 * Return a positive value if pix_fmt is a supported input format, 0<br>
	 * otherwise.<br>
	 * Original signature : <code>int sws_isSupportedInput(AVPixelFormat)</code>
	 */
	int sws_isSupportedInput(int pix_fmt);
	/**
	 * Return a positive value if pix_fmt is a supported output format, 0<br>
	 * otherwise.<br>
	 * Original signature : <code>int sws_isSupportedOutput(AVPixelFormat)</code>
	 */
	int sws_isSupportedOutput(int pix_fmt);
	/**
	 * @param[in]  pix_fmt the pixel format<br>
	 * @return a positive value if an endianness conversion for pix_fmt is<br>
	 * supported, 0 otherwise.<br>
	 * Original signature : <code>int sws_isSupportedEndiannessConversion(AVPixelFormat)</code>
	 */
	int sws_isSupportedEndiannessConversion(int pix_fmt);
	/**
	 * Allocate an empty SwsContext. This must be filled and passed to<br>
	 * sws_init_context(). For filling see AVOptions, options.c and<br>
	 * sws_setColorspaceDetails().<br>
	 * Original signature : <code>SwsContext* sws_alloc_context()</code>
	 */
	LibswscaleLibrary.SwsContext sws_alloc_context();
	/**
	 * Initialize the swscaler context sws_context.<br>
	 * * @return zero or positive value on success, a negative value on<br>
	 * error<br>
	 * Original signature : <code>int sws_init_context(SwsContext*, SwsFilter*, SwsFilter*)</code>
	 */
	int sws_init_context(LibswscaleLibrary.SwsContext sws_context, SwsFilter srcFilter, SwsFilter dstFilter);
	/**
	 * Free the swscaler context swsContext.<br>
	 * If swsContext is NULL, then does nothing.<br>
	 * Original signature : <code>void sws_freeContext(SwsContext*)</code>
	 */
	void sws_freeContext(LibswscaleLibrary.SwsContext swsContext);
	/**
	 * Allocate and return an SwsContext. You need it to perform<br>
	 * scaling/conversion operations using sws_scale().<br>
	 * * @param srcW the width of the source image<br>
	 * @param srcH the height of the source image<br>
	 * @param srcFormat the source image format<br>
	 * @param dstW the width of the destination image<br>
	 * @param dstH the height of the destination image<br>
	 * @param dstFormat the destination image format<br>
	 * @param flags specify which algorithm and options to use for rescaling<br>
	 * @return a pointer to an allocated context, or NULL in case of error<br>
	 * @note this function is to be removed after a saner alternative is<br>
	 *       written<br>
	 * @deprecated Use sws_getCachedContext() instead.<br>
	 * Original signature : <code>SwsContext* sws_getContext(int, int, AVPixelFormat, int, int, AVPixelFormat, int, SwsFilter*, SwsFilter*, const double*)</code><br>
	 * @deprecated use the safer methods {@link #sws_getContext(int, int, int, int, int, int, int, org.javaavc.ffmpeg.swscale.SwsFilter, org.javaavc.ffmpeg.swscale.SwsFilter, java.nio.DoubleBuffer)} and {@link #sws_getContext(int, int, int, int, int, int, int, org.javaavc.ffmpeg.swscale.SwsFilter, org.javaavc.ffmpeg.swscale.SwsFilter, com.sun.jna.ptr.DoubleByReference)} instead
	 */
	@Deprecated 
	LibswscaleLibrary.SwsContext sws_getContext(int srcW, int srcH, int srcFormat, int dstW, int dstH, int dstFormat, int flags, SwsFilter srcFilter, SwsFilter dstFilter, DoubleByReference param);
	/**
	 * Allocate and return an SwsContext. You need it to perform<br>
	 * scaling/conversion operations using sws_scale().<br>
	 * * @param srcW the width of the source image<br>
	 * @param srcH the height of the source image<br>
	 * @param srcFormat the source image format<br>
	 * @param dstW the width of the destination image<br>
	 * @param dstH the height of the destination image<br>
	 * @param dstFormat the destination image format<br>
	 * @param flags specify which algorithm and options to use for rescaling<br>
	 * @return a pointer to an allocated context, or NULL in case of error<br>
	 * @note this function is to be removed after a saner alternative is<br>
	 *       written<br>
	 * @deprecated Use sws_getCachedContext() instead.<br>
	 * Original signature : <code>SwsContext* sws_getContext(int, int, AVPixelFormat, int, int, AVPixelFormat, int, SwsFilter*, SwsFilter*, const double*)</code>
	 */
	LibswscaleLibrary.SwsContext sws_getContext(int srcW, int srcH, int srcFormat, int dstW, int dstH, int dstFormat, int flags, SwsFilter srcFilter, SwsFilter dstFilter, DoubleBuffer param);
	/**
	 * Scale the image slice in srcSlice and put the resulting scaled<br>
	 * slice in the image in dst. A slice is a sequence of consecutive<br>
	 * rows in an image.<br>
	 * * Slices have to be provided in sequential order, either in<br>
	 * top-bottom or bottom-top order. If slices are provided in<br>
	 * non-sequential order the behavior of the function is undefined.<br>
	 * * @param c         the scaling context previously created with<br>
	 *                  sws_getContext()<br>
	 * @param srcSlice  the array containing the pointers to the planes of<br>
	 *                  the source slice<br>
	 * @param srcStride the array containing the strides for each plane of<br>
	 *                  the source image<br>
	 * @param srcSliceY the position in the source image of the slice to<br>
	 *                  process, that is the number (counted starting from<br>
	 *                  zero) in the image of the first row of the slice<br>
	 * @param srcSliceH the height of the source slice, that is the number<br>
	 *                  of rows in the slice<br>
	 * @param dst       the array containing the pointers to the planes of<br>
	 *                  the destination image<br>
	 * @param dstStride the array containing the strides for each plane of<br>
	 *                  the destination image<br>
	 * @return          the height of the output slice<br>
	 * Original signature : <code>int sws_scale(SwsContext*, const const uint8_t*[], const int[], int, int, const uint8_t*[], const int[])</code><br>
	 * @deprecated use the safer methods {@link #sws_scale(org.javaavc.ffmpeg.swscale.LibswscaleLibrary.SwsContext, com.sun.jna.ptr.PointerByReference, java.nio.IntBuffer, int, int, com.sun.jna.ptr.PointerByReference, java.nio.IntBuffer)} and {@link #sws_scale(org.javaavc.ffmpeg.swscale.LibswscaleLibrary.SwsContext, com.sun.jna.ptr.PointerByReference, com.sun.jna.ptr.IntByReference, int, int, com.sun.jna.ptr.PointerByReference, com.sun.jna.ptr.IntByReference)} instead
	 */
	@Deprecated 
	int sws_scale(LibswscaleLibrary.SwsContext c, PointerByReference srcSlice, IntByReference srcStride, int srcSliceY, int srcSliceH, PointerByReference dst, IntByReference dstStride);
	/**
	 * Scale the image slice in srcSlice and put the resulting scaled<br>
	 * slice in the image in dst. A slice is a sequence of consecutive<br>
	 * rows in an image.<br>
	 * * Slices have to be provided in sequential order, either in<br>
	 * top-bottom or bottom-top order. If slices are provided in<br>
	 * non-sequential order the behavior of the function is undefined.<br>
	 * * @param c         the scaling context previously created with<br>
	 *                  sws_getContext()<br>
	 * @param srcSlice  the array containing the pointers to the planes of<br>
	 *                  the source slice<br>
	 * @param srcStride the array containing the strides for each plane of<br>
	 *                  the source image<br>
	 * @param srcSliceY the position in the source image of the slice to<br>
	 *                  process, that is the number (counted starting from<br>
	 *                  zero) in the image of the first row of the slice<br>
	 * @param srcSliceH the height of the source slice, that is the number<br>
	 *                  of rows in the slice<br>
	 * @param dst       the array containing the pointers to the planes of<br>
	 *                  the destination image<br>
	 * @param dstStride the array containing the strides for each plane of<br>
	 *                  the destination image<br>
	 * @return          the height of the output slice<br>
	 * Original signature : <code>int sws_scale(SwsContext*, const const uint8_t*[], const int[], int, int, const uint8_t*[], const int[])</code>
	 */
	int sws_scale(LibswscaleLibrary.SwsContext c, PointerByReference srcSlice, IntBuffer srcStride, int srcSliceY, int srcSliceH, PointerByReference dst, IntBuffer dstStride);
